--- a/Snowy-mountains-template/index.html
+++ b/Snowy-mountains-template/index.html
@@ -38,13 +38,15 @@
 
 <body class="index-page">
 
-  <header id="header" class="header d-flex align-items-center fixed-top">
+  <header id="header" class="header fixed-top d-flex align-items-center fixed-top">
+
+
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <img src="assets/img/logo.png" alt="NewIce logo">
-        <h1 class="sitename">Tanner</h1>
+        <img src="assets/img/logo.png" alt="NewIce logo" style="font-size: 30px;">
+        <h1 class="sitename">Newice</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
