links added to topbar

--- a/RedBlack-demo/timetable.html
+++ b/RedBlack-demo/timetable.html
@@ -38,16 +38,14 @@
     <div class="topbar d-flex align-items-center">
       <div class="container d-flex justify-content-center justify-content-md-between">
         <div class="contact-info d-flex align-items-center">
-          <i class="bi bi-envelope-fill d-none d-lg-flex align-items-center"><a
-              href="mailto:newiceinfo@gmail.com">newiceinfo@gmail.com</a></i>
-          <i class="bi bi-telephone-fill d-none d-md-flex align-items-center ms-4"><span>+36 30 569 9567</span></i>
-          <i class="bi bi-geo-alt-fill d-flex align-items-center ms-4"><span>2040 Budaörs, Baross u.146. Decathlon
-              parkoló</span></i>
+          <i class="bi bi-envelope-fill d-none d-lg-flex align-items-center"><a href="mailto:newiceinfo@gmail.com">newiceinfo@gmail.com</a></i>
+          <i class="bi bi-telephone-fill d-none d-md-flex align-items-center ms-4"><span><a href="tel:+36305699567">+36 30 569 9567</a></span></i>
+          <i class="bi bi-geo-alt-fill d-flex align-items-center ms-4"><a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwj5jOetmYWLAxXrQlUIHfPMK4AQ4kB6BAg6EAM&url=%2Fmaps%2Fplace%2F%2Fdata%3D!4m2!3m1!1s0x4741e081524a6aab%3A0xabf66f53b5f548fe%3Fsa%3DX%26ved%3D1t%3A8290%26ictx%3D111&usg=AOvVaw2_z6fP-74wvJvfpsjspqf8&opi=89978449"><span>2040 Budaörs, Baross u.146. Decathlon parkoló</span></a></i>
         </div>
         <div class="social-links d-flex align-items-center">
-          <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-          <a href="#" class="tiktok"><i class="bi bi-tiktok"></i></a>
+          <a href="https://www.facebook.com/NewIceJegpalyaBudaors/?ref=embed_page" class="facebook" title="Facebook"><i class="bi bi-facebook"></i></a>
+          <a href="https://www.instagram.com/newicejegpalya?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" class="instagram" title="Instagram"><i class="bi bi-instagram"></i></a>
+          <a href="#" class="tiktok" title="Hamarosan"><i class="bi bi-tiktok"></i></a>
         </div>
       </div>
     </div>
