Responsiveness tweaks, published
http://newice.hstn.me/

--- a/RedBlack-demo/timetable.html
+++ b/RedBlack-demo/timetable.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Starter Page - Day Bootstrap Template</title>
+  <title>NewIce | Nyitvatartás</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -113,7 +113,7 @@
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="200">
-        <table class="table table-borderless">
+        <table class="table table-borderless table-responsive-md">
           <thead>
             <tr class="text-center">
               <th scope="col"></th>
