--- a/RedBlack-demo/error.html
+++ b/RedBlack-demo/error.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Starter Page - Day Bootstrap Template</title>
+  <title>NewIce | Error</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -94,10 +94,10 @@
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Kezdőlap</a></li>
-            <li class="current">Rólunk</li>
+            <li class="current">Error</li>
           </ol>
         </nav>
-        <h1>Rólunk</h1>
+        <h1>Error</h1>
       </div>
     </div>
     <!-- End Page Title -->
@@ -107,14 +107,10 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <span>Starter Section<br></span>
-        <h2>Starter Section</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <span>ERROR<br></span>
+        <h2>ERROR</h2>
+        <p>Ez az oldal sajnos nem létezik <i class="bi bi-emoji-tear"></i></p>
       </div><!-- End Section Title -->
-
-      <div class="container" data-aos="fade-up">
-        <p>Use this page as a starter for your own custom pages.</p>
-      </div>
 
     </section><!-- /Starter Section Section -->
 
