--- a/RedBlack-demo/rules.html
+++ b/RedBlack-demo/rules.html
@@ -86,7 +86,7 @@
   <main class="main">
 
     <!-- Page Title -->
-    <div class="page-title accent-background" data-aos="fade">
+    <div class="page-title accent-background" data-aos="fade-down">
       <div class="container">
         <nav class="breadcrumbs">
           <ol>
