--- a/RedBlack-demo/contact.html
+++ b/RedBlack-demo/contact.html
@@ -15,7 +15,9 @@
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -40,7 +42,7 @@
           <i class="bi bi-telephone-fill d-none d-md-flex align-items-center ms-4"><span><a href="tel:+36305699567">+36 30 569 9567</a></span></i>
           <i class="bi bi-geo-alt-fill d-flex align-items-center ms-4"><a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwj5jOetmYWLAxXrQlUIHfPMK4AQ4kB6BAg6EAM&url=%2Fmaps%2Fplace%2F%2Fdata%3D!4m2!3m1!1s0x4741e081524a6aab%3A0xabf66f53b5f548fe%3Fsa%3DX%26ved%3D1t%3A8290%26ictx%3D111&usg=AOvVaw2_z6fP-74wvJvfpsjspqf8&opi=89978449"><span>2040 Budaörs, Baross u.146. Decathlon parkoló</span></a></i>
         </div>
-        <div class="social-links d-flex align-items-center">
+        <div class="social-links d-none d-sm-flex align-items-center">
           <a href="https://www.facebook.com/NewIceJegpalyaBudaors/?ref=embed_page" class="facebook" title="Facebook"><i class="bi bi-facebook"></i></a>
           <a href="https://www.instagram.com/newicejegpalya?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" class="instagram" title="Instagram"><i class="bi bi-instagram"></i></a>
           <a href="#" class="tiktok" title="Hamarosan"><i class="bi bi-tiktok"></i></a>
@@ -59,10 +61,11 @@
         </a>
 
         <nav id="navmenu" class="navmenu">
-          <ul >
+          <ul>
             <li><a href="index.html" class="active">Kezdőlap</a></li>
             <li><a href="timetable.html">Nyitvatartás</a></li>
-            <li class="dropdown"><a href="prices.html"><span>Áraink</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+            <li class="dropdown"><a href="prices.html"><span>Áraink</span> <i
+                  class="bi bi-chevron-down toggle-dropdown"></i></a>
               <ul>
                 <li><a href="prices.html#tickets">Belépők</a></li>
                 <li><a href="prices.html#teach">Korcsolyaoktatás</a></li>
@@ -86,7 +89,7 @@
   <main class="main">
 
     <!-- Page Title -->
-    <div class="page-title accent-background" data-aos="fade">
+    <div class="page-title accent-background" data-aos="fade-down">
       <div class="container">
         <nav class="breadcrumbs">
           <ol>
@@ -123,7 +126,8 @@
       <div class="row g-5">
         <div class="col-sm-12 col-md-6">
           <div class="footer-about">
-            <a href="index.html" class="logo sitename d-flex align-items-center"><img src="assets/img/logo.png" alt="NewIce logo"><span>NewIce</span></a>
+            <a href="index.html" class="logo sitename d-flex align-items-center"><img src="assets/img/logo.png"
+                alt="NewIce logo"><span>NewIce</span></a>
             <div class="footer-contact pt-3">
               <p>2040 Budaörs, Baross u.146. Decathlon parkoló</p>
               <p class="mt-3"><strong>Telefon:</strong> <span>+36 30 569 9567</span></p>
@@ -175,7 +179,8 @@
     </div>
 
     <div class="container copyright text-center">
-      <p><span>Copyright</span> © 2025 <strong class="px-1 sitename">NewIce</strong> - <span>Minden jog fenntartva</span></p>
+      <p><span>Copyright</span> © 2025 <strong class="px-1 sitename">NewIce</strong> - <span>Minden jog
+          fenntartva</span></p>
       <div class="credits">
         A weboldalt készítette: <a href="">Szenes Márton</a>
       </div>
@@ -184,7 +189,8 @@
   </footer>
 
   <!-- Scroll Top -->
-  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
 
   <!-- Preloader -->
   <div id="preloader"></div>
