Prices - community section made

--- a/RedBlack-demo/prices.html
+++ b/RedBlack-demo/prices.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Starter Page - Day Bootstrap Template</title>
+  <title>NewIce | Áraink</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -15,9 +15,7 @@
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -31,7 +29,7 @@
 
 </head>
 
-<body class="starter-page-page">
+<body class="prices-page">
 
   <header id="header" class="header sticky-top">
 
@@ -40,7 +38,8 @@
         <div class="contact-info d-flex align-items-center">
           <i class="bi bi-envelope-fill d-none d-lg-flex align-items-center"><a href="mailto:newiceinfo@gmail.com">newiceinfo@gmail.com</a></i>
           <i class="bi bi-telephone-fill d-none d-md-flex align-items-center ms-4"><span><a href="tel:+36305699567">+36 30 569 9567</a></span></i>
-          <i class="bi bi-geo-alt-fill d-flex align-items-center ms-4"><a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwj5jOetmYWLAxXrQlUIHfPMK4AQ4kB6BAg6EAM&url=%2Fmaps%2Fplace%2F%2Fdata%3D!4m2!3m1!1s0x4741e081524a6aab%3A0xabf66f53b5f548fe%3Fsa%3DX%26ved%3D1t%3A8290%26ictx%3D111&usg=AOvVaw2_z6fP-74wvJvfpsjspqf8&opi=89978449"><span>2040 Budaörs, Baross u.146. Decathlon parkoló</span></a></i>
+          <i class="bi bi-geo-alt-fill d-flex align-items-center ms-4"><a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwj5jOetmYWLAxXrQlUIHfPMK4AQ4kB6BAg6EAM&url=%2Fmaps%2Fplace%2F%2Fdata%3D!4m2!3m1!1s0x4741e081524a6aab%3A0xabf66f53b5f548fe%3Fsa%3DX%26ved%3D1t%3A8290%26ictx%3D111&usg=AOvVaw2_z6fP-74wvJvfpsjspqf8&opi=89978449">2040
+              Budaörs, Baross u.146. Decathlon parkoló</a></i>
         </div>
         <div class="social-links d-none d-sm-flex align-items-center">
           <a href="https://www.facebook.com/NewIceJegpalyaBudaors/?ref=embed_page" class="facebook" title="Facebook"><i class="bi bi-facebook"></i></a>
@@ -51,6 +50,7 @@
     </div>
     <!-- End Top Bar -->
 
+
     <div class="branding d-flex align-items-center">
 
       <div class="container position-relative d-flex align-items-center justify-content-between">
@@ -60,11 +60,17 @@
           <span class="sitename">NewIce</span>
         </a>
 
+        <div class="social-links d-flex d-sm-none">
+          <a href="https://www.facebook.com/NewIceJegpalyaBudaors/?ref=embed_page" class="facebook" title="Facebook"><i class="bi bi-facebook"></i></a>
+          <a href="https://www.instagram.com/newicejegpalya?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" class="instagram" title="Instagram"><i class="bi bi-instagram"></i></a>
+          <a href="#" class="tiktok" title="Hamarosan"><i class="bi bi-tiktok"></i></a>
+        </div>
+
         <nav id="navmenu" class="navmenu">
           <ul>
-            <li><a href="index.html" class="active">Kezdőlap</a></li>
-            <li><a href="timetable.html">Nyitvatartás</a></li>
-            <li class="dropdown"><a href="prices.html"><span>Áraink</span> <i
+            <li><a href="index.html">Kezdőlap</a></li>
+            <li><a href="open.html">Nyitvatartás</a></li>
+            <li class="dropdown"><a href="prices.html" class="active"><span>Áraink</span> <i
                   class="bi bi-chevron-down toggle-dropdown"></i></a>
               <ul>
                 <li><a href="prices.html#tickets">Belépők</a></li>
@@ -107,14 +113,186 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <span>Starter Section<br></span>
-        <h2>Starter Section</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <span>Közönségjég<br></span>
+        <h2>Közönségjég</h2>
+        <p>Az belépők egszeri alkalmi belépésre jogosítanak fel.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up">
-        <p>Use this page as a starter for your own custom pages.</p>
+        <div class="row g-4">
+          <div class="col-12 col-lg-6">
+            <div class="card shadow">
+              <div class="card-header">
+                <h3>Hétköznap</h3>
+              </div>
+              <div class="card-body">
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item d-flex align-items-center justify-content-between">
+                    <div class="d-block">
+                      <h4>Gyermek</h4>
+                      <h6>14 éves korig</h6>
+                    </div>
+                    <h4 class="pricing pricing-item">2.300 Ft</h4>
+                  </li>
+                  <li class="list-group-item d-flex align-items-center justify-content-between"><h4>Felnőtt</h4><h4 class="pricing pricing-item">3.000 Ft</h4></li>
+                  <li class="list-group-item d-block">
+                    <div class="d-flex">
+                      <div class="d-block">
+                        <h4>Családi</h4>
+                        <h6 class="text-success">20% kedvezmény</h6>
+                      </div>
+                      <div class="d-block ms-auto">
+                        <div class="d-flex align-items-center">
+                          <h6 class="me-2">(2 felnőtt + 2 gyerek)</h6><h4 class="pricing pricing-item ms-auto">8.500 Ft</h4>
+                        </div>
+                        <div class="d-flex align-items-center">
+                          <h6 class="me-2">(2 felnőtt + 3 gyerek)</h6><h4 class="pricing pricing-item ms-auto">11.000 Ft</h4>
+                        </div>
+                      </div>
+                    </div>
+                  </li>
+                  <li class="list-group-item d-flex align-items-center justify-content-between"><h4>20% Csoportos kedvezmény</h4><h4 class="pricing pricing-item">4 fő felett</h4></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-lg-6">
+            <div class="card shadow">
+              <div class="card-header d-flex align-items-baseline">
+                <h3>Hétvégén</h3>
+                <h6 class="ms-auto text-end">(Munkaszüneti és iskolaszüneti napokon)</h6>
+              </div>
+              <div class="card-body">
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item d-flex align-items-center justify-content-between">
+                    <div class="d-block">
+                      <h4>Gyermek</h4>
+                      <h6>14 éves korig</h6>
+                    </div>
+                    <h4 class="pricing pricing-item">3.000 Ft</h4>
+                  </li>
+                  <li class="list-group-item d-flex align-items-center justify-content-between"><h4>Felnőtt</h4><h4 class="pricing pricing-item">4.000 Ft</h4></li>
+                  <li class="list-group-item d-block">
+                    <div class="d-flex">
+                      <div class="d-block">
+                        <h4>Családi</h4>
+                        <h6 class="text-success">20% kedvezmény</h6>
+                      </div>
+                      <div class="d-block ms-auto">
+                        <div class="d-flex align-items-center">
+                          <h6 class="me-2">(2 felnőtt + 2 gyerek)</h6><h4 class="pricing pricing-item ms-auto">11.00 Ft</h4>
+                        </div>
+                        <div class="d-flex align-items-center">
+                          <h6 class="me-2">(2 felnőtt + 3 gyerek)</h6><h4 class="pricing pricing-item ms-auto">13.500 Ft</h4>
+                        </div>
+                      </div>
+                    </div>
+                  </li>
+                  <li class="list-group-item d-flex align-items-center justify-content-between"><h4>20% Csoportos kedvezmény</h4><h4 class="pricing pricing-item">4 fő felett</h4></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-lg-6">
+            <div class="card shadow">
+              <div class="card-header d-flex align-items-baseline">
+                <h3>Korcsolyabérlés</h3>
+              </div>
+              <div class="card-body">
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item d-flex align-items-center justify-content-between"><h4>Gyermek</h4><h4 class="pricing pricing-item">1.500 Ft</h4></li>
+                  <li class="list-group-item d-flex align-items-center justify-content-between"><h4>Felnőtt</h4><h4 class="pricing pricing-item">2.000 Ft</h4></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-lg-6">
+            <div class="card shadow">
+              <div class="card-header d-flex align-items-baseline">
+                <h3>Kísérőjegy</h3>
+              </div>
+              <div class="card-body">
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item d-flex align-items-center justify-content-between">
+                    <h5 class="w-75">19.00 óra után csak kísérőjeggyel lehet a jégpálya területén tartózkodni annak aki nem korcsolyázik</h5>
+                    <h4 class="pricing pricing-item ms-auto">1.000 Ft</h4></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
+
+      KÖZÖNSÉGJÉG BELÉPŐK hétköznap:
+      * Gyermek (14 éves korig) – 2.300 Ft / alkalom
+      * Felnőtt (14 éves kor felett) – 3.000 Ft / alkalom
+
+      KÖZÖNSÉGJÉG BELÉPŐK hétvégén, munkaszüneti és iskolaszüneti napokon:
+      * Gyermek (14 éves korig) – 3.000 Ft / alkalom
+      * Felnőtt (14 éves kor felett) – 4.000 Ft / alkalom
+
+      KÍSÉRŐ JEGY (19.00 óra után csak kísérőjeggyel lehet a jégpálya területén tartózkodni annak aki nem korcsolyázik): 1.000 Ft
+
+      KÖZÖNSÉGJÉG CSALÁDI BELÉPŐK hétköznap:
+      * 2 felnőtt + 2 gyermek (14 éves korig) – 8.500 Ft / alkalom
+      * 2 felnőtt + 3 gyermek (14 éves korig) – 11.000 Ft / alkalom
+
+      KÖZÖNSÉGJÉG CSALÁDI BELÉPŐK hétvégén, munkaszüneti és iskolaszüneti napokon:
+      * 2 felnőtt + 2 gyermek (14 éves korig) – 11.000 Ft / alkalom
+      * 2 felnőtt + 3 gyermek (14 éves korig) – 13.500 Ft / alkalom
+
+      KORCSOLYA BÉRLÉS (hétköznap és hétvégén):
+      * 14 év alatt: 1.500 Ft / alkalom
+      * 14 év felett: 2.000 Ft / alkalom
+
+      PÁLYABÉRLÉS:
+      * Hétfő – Csütörtök: 40.000 Ft / 50 perc
+      * Péntek – Vasárnap: 50.000 Ft / 50 perc
+      Bérlehető időpontok:
+      Hétköznap (hétfőtől péntekig): 6.00-24.00.
+      Hétvégén (szombaton és vasárnap): 13.00-15.00 és 20.00-24.00.
+      A pályabérlés ára a belső, sátorral fedett jégpályára és az elő sátorra vonatkozik! A jégfolyosó használatát nem tartalmazza!
+      Az egész jég komplexum (jégpálya és jégfolyosó) kibérlésére is van lehetőség, melynek ára: 150.000 Ft / 50 perc.
+      További információk és kedvezmények a pályabérlés menüpont alatt!
+
+      KORI SULI – oktatás kezdő és középhaladó szinten gyerekeknek
+      3 éves kortól:
+      * Hétfő: 17.00-17.50 óra
+      * Szerda: 17.00-17.50 óra
+      * Szombat: 9.00-9.50 óra
+      Ár: 5.500 Ft / Fő / alkalom
+      Testvér kedvezmény: 5.000 Ft / Fő / alkalom
+
+      KÖZÉPHALADÓ, HALADÓ ÉS FELNŐTT KORCSOLYA OKTATÁS:
+      * Hétfő: 18.00-18.50 óra
+      * Szerda: 18.00-18.50 óra
+      * Szombat: 08.00-08.50 óra
+      Ár: 6.500 Ft / Fő / alkalom
+      Testvér (család) kedvezmény: 6.000 Ft / Fő / alkalom
+      Havi bérlet/tagdíj vásárlására is van lehetőség, ami tartalmazza az adott hónapban az összes oktatáson/edzésen – hétfő, szerda, szombat – való részvételt.
+      Ára: 65.000 Ft / hó
+      A havi bérlet árát semmilyen esetben – betegség, utazás, stb. – nem térítjük vissza, mert tagdíjként funkcionál!
+
+      MAGÁN KORI OKTATÁS:
+      Elő- és utó szezonban elérhető!
+      Időpontok egyeztetés szerint.
+      Árak: 7.500 Ft / Fő / 50 perc
+      5.000 Ft / Fő / 25 perc
+      A magán oktatás ára nem tartalmazza a jégpálya belépő árát!
+
+      HOKI SULI (kezdő jégkorong oktatás):
+      www.budaorsvillamok.hu
+      * 4.000 Ft / Fő / alkalom
+      * 5 alkalmas bérlet: 20.000 Ft / Fő (csak kezdőknek).
+      Időpontok:
+      * Kedd: 16:30 – 17:15.
+      * Csütörtök: 16:30 – 17.15. és Vasárnap 9:00 – 9:50
+      BV_logo_fehe¦ür_keret_ne¦ülku¦łl_fehe¦ür_ha¦ütte¦ür_2083px
+      JÉGKORONG utánpótlás EGYESÜLET:
+      www.budaorsvillamok.hu
+      * 4.000 Ft / Fő / alkalom
+      * Tagdíj 1 hónapra: 30.000 Ft / Fő, testvérek esetén 50.000 Ft / 2 Fő, amely tartalmazza a heti 3 jeges edzést, heti 1-2 száraz edzést, havi 1 korcsolyatechnika edzést, edző meccseket…
+
 
     </section><!-- /Starter Section Section -->
 
