--- a/RedBlack-demo/index.html
+++ b/RedBlack-demo/index.html
@@ -38,7 +38,8 @@
         <div class="contact-info d-flex align-items-center">
           <i class="bi bi-envelope-fill d-none d-lg-flex align-items-center"><a href="mailto:newiceinfo@gmail.com">newiceinfo@gmail.com</a></i>
           <i class="bi bi-telephone-fill d-none d-md-flex align-items-center ms-4"><span><a href="tel:+36305699567">+36 30 569 9567</a></span></i>
-          <i class="bi bi-geo-alt-fill d-flex align-items-center ms-4"><a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwj5jOetmYWLAxXrQlUIHfPMK4AQ4kB6BAg6EAM&url=%2Fmaps%2Fplace%2F%2Fdata%3D!4m2!3m1!1s0x4741e081524a6aab%3A0xabf66f53b5f548fe%3Fsa%3DX%26ved%3D1t%3A8290%26ictx%3D111&usg=AOvVaw2_z6fP-74wvJvfpsjspqf8&opi=89978449">2040 Budaörs, Baross u.146. Decathlon parkoló</a></i>
+          <i class="bi bi-geo-alt-fill d-flex align-items-center ms-4"><a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwj5jOetmYWLAxXrQlUIHfPMK4AQ4kB6BAg6EAM&url=%2Fmaps%2Fplace%2F%2Fdata%3D!4m2!3m1!1s0x4741e081524a6aab%3A0xabf66f53b5f548fe%3Fsa%3DX%26ved%3D1t%3A8290%26ictx%3D111&usg=AOvVaw2_z6fP-74wvJvfpsjspqf8&opi=89978449">2040
+              Budaörs, Baross u.146. Decathlon parkoló</a></i>
         </div>
         <div class="social-links d-none d-sm-flex align-items-center">
           <a href="https://www.facebook.com/NewIceJegpalyaBudaors/?ref=embed_page" class="facebook" title="Facebook"><i class="bi bi-facebook"></i></a>
@@ -48,7 +49,7 @@
       </div>
     </div>
     <!-- End Top Bar -->
-    
+
 
     <div class="branding d-flex align-items-center">
 
@@ -68,8 +69,9 @@
         <nav id="navmenu" class="navmenu">
           <ul>
             <li><a href="index.html" class="active">Kezdőlap</a></li>
-            <li><a href="timetable.html">Nyitvatartás</a></li>
-            <li class="dropdown"><a href="prices.html"><span>Áraink</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+            <li><a href="open.html">Nyitvatartás</a></li>
+            <li class="dropdown"><a href="prices.html"><span>Áraink</span> <i
+                  class="bi bi-chevron-down toggle-dropdown"></i></a>
               <ul>
                 <li><a href="prices.html#tickets">Belépők</a></li>
                 <li><a href="prices.html#teach">Korcsolyaoktatás</a></li>
@@ -95,7 +97,8 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section">
 
-      <div id="hero-carousel" class="carousel slide carousel-fade dark-background" data-bs-ride="carousel" data-bs-interval="5000">
+      <div id="hero-carousel" class="carousel slide carousel-fade dark-background" data-bs-ride="carousel"
+        data-bs-interval="5000">
 
         <div class="carousel-item active">
           <img src="assets/img/hero_1.jpg" alt="">
@@ -166,7 +169,7 @@
 
     </section>
     <!-- /Hero Section -->
-    
+
 
     <!-- Actual Section -->
     <section id="actual" class="actual section px-3">
@@ -175,7 +178,8 @@
       <div class="container section-title" data-aos="fade-up">
         <span>Aktuális</span>
         <h2>Aktuális</h2>
-        <p>A közönség számára látogatható időpontokkal kapcsolatban kérjük minden esetben tájékozódjanak a <a href="timetable.html">Nyitvatartás</a> menü pont alatt!</p>
+        <p>A közönség számára látogatható időpontokkal kapcsolatban kérjük minden esetben tájékozódjanak a <a
+            href="timetable.html">Nyitvatartás</a> menü pont alatt!</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -183,7 +187,8 @@
         <div class="row gy-4">
 
           <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-up" data-aos-delay="100">
-            <img src="assets/img/actual/aktualis-korcsolya-oktatas.png" class="img-fluid hover-grow shadow rounded" alt="">
+            <img src="assets/img/actual/aktualis-korcsolya-oktatas.png" class="img-fluid hover-grow shadow rounded"
+              alt="">
           </div>
 
           <div class="col-lg-6 order-2 order-lg-1 content" data-aos="fade-up" data-aos-delay="200">
@@ -224,12 +229,13 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="service-item position-relative rounded shadow">
               <div class="icon">
-                 <img src="assets/img/icons/ice-skating-people.png" alt="">
+                <img src="assets/img/icons/ice-skating-people.png" alt="">
               </div>
               <a href="#" class="stretched-link">
                 <h3>Közönségkorcsolya</h3>
               </a>
-              <p>Provident nihil minus qui consequatur non omnis maiores. Eos accusantium minus dolores iure perferendis tempore et consequatur.</p>
+              <p>Provident nihil minus qui consequatur non omnis maiores. Eos accusantium minus dolores iure perferendis
+                tempore et consequatur.</p>
             </div>
           </div><!-- End Service Item -->
 
@@ -241,7 +247,8 @@
               <a href="#" class="stretched-link">
                 <h3>Korcsolyaoktatás</h3>
               </a>
-              <p>Ut autem aut autem non a. Sint sint sit facilis nam iusto sint. Libero corrupti neque eum hic non ut nesciunt dolorem.</p>
+              <p>Ut autem aut autem non a. Sint sint sit facilis nam iusto sint. Libero corrupti neque eum hic non ut
+                nesciunt dolorem.</p>
             </div>
           </div><!-- End Service Item -->
 
@@ -253,7 +260,8 @@
               <a href="#" class="stretched-link">
                 <h3>Pályabérlés</h3>
               </a>
-              <p>Ut excepturi voluptatem nisi sed. Quidem fuga consequatur. Minus ea aut. Vel qui id voluptas adipisci eos earum corrupti.</p>
+              <p>Ut excepturi voluptatem nisi sed. Quidem fuga consequatur. Minus ea aut. Vel qui id voluptas adipisci
+                eos earum corrupti.</p>
             </div>
           </div><!-- End Service Item -->
 
@@ -265,7 +273,8 @@
               <a href="#" class="stretched-link">
                 <h3>Szülinapok</h3>
               </a>
-              <p>Non et temporibus minus omnis sed dolor esse consequatur. Cupiditate sed error ea fuga sit provident adipisci neque.</p>
+              <p>Non et temporibus minus omnis sed dolor esse consequatur. Cupiditate sed error ea fuga sit provident
+                adipisci neque.</p>
               <a href="#" class="stretched-link"></a>
             </div>
           </div><!-- End Service Item -->
@@ -278,7 +287,8 @@
               <a href="#" class="stretched-link">
                 <h3>Hokicsapatok</h3>
               </a>
-              <p>Cumque et suscipit saepe. Est maiores autem enim facilis ut aut ipsam corporis aut. Sed animi at autem alias eius labore.</p>
+              <p>Cumque et suscipit saepe. Est maiores autem enim facilis ut aut ipsam corporis aut. Sed animi at autem
+                alias eius labore.</p>
               <a href="#" class="stretched-link"></a>
             </div>
           </div><!-- End Service Item -->
@@ -291,7 +301,8 @@
               <a href="#" class="stretched-link">
                 <h3>Céges rendezvények</h3>
               </a>
-              <p>Hic molestias ea quibusdam eos. Fugiat enim doloremque aut neque non et debitis iure. Corrupti recusandae ducimus enim.</p>
+              <p>Hic molestias ea quibusdam eos. Fugiat enim doloremque aut neque non et debitis iure. Corrupti
+                recusandae ducimus enim.</p>
               <a href="#" class="stretched-link"></a>
             </div>
           </div><!-- End Service Item -->
@@ -310,7 +321,8 @@
         <div class="row g-5">
           <div class="col-12 col-sm-12 col-md-6">
             <div class="footer-about">
-              <a href="index.html" class="logo sitename d-flex align-items-center"><img src="assets/img/logo.png" alt="NewIce logo"><span>NewIce</span></a>
+              <a href="index.html" class="logo sitename d-flex align-items-center"><img src="assets/img/logo.png"
+                  alt="NewIce logo"><span>NewIce</span></a>
               <div class="footer-contact pt-3">
                 <p>2040 Budaörs, Baross u.146. Decathlon parkoló</p>
                 <p class="mt-3"><strong>Telefon:</strong> <span>+36 30 569 9567</span></p>
@@ -323,7 +335,7 @@
               </div>
             </div>
           </div>
-  
+
           <div class="col-6 col-sm-6 col-md-3 footer-links">
             <h4>Hasznos linkek</h4>
             <ul>
@@ -335,7 +347,7 @@
               <li><a href="#">Házirend</a></li>
             </ul>
           </div>
-  
+
           <div class="col-6 col-sm-6 col-md-3 footer-links">
             <h4>Ezek is érdekesek lehetnek</h4>
             <ul>
@@ -346,47 +358,39 @@
               <li><a href="#">Budaörsi Villámok</a></li>
             </ul>
           </div>
-  
-          <!-- <div class="col-lg-4 col-md-12 footer-newsletter">
-            <h4>Our Newsletter</h4>
-            <p>Subscribe to our newsletter and receive the latest news about our products and services!</p>
-            <form action="forms/newsletter.php" method="post" class="php-email-form">
-              <div class="newsletter-form"><input type="email" name="email"><input type="submit" value="Subscribe"></div>
-              <div class="loading">Loading</div>
-              <div class="error-message"></div>
-              <div class="sent-message">Your subscription request has been sent. Thank you!</div>
-            </form>
-          </div> -->
-  
+
         </div>
+
       </div>
-  
+
       <div class="container copyright text-center">
-        <p><span>Copyright</span> © 2025 <strong class="px-1 sitename">NewIce</strong> - <span>Minden jog fenntartva</span></p>
+        <p><span>Copyright</span> © 2025 <strong class="px-1 sitename">NewIce</strong> - <span>Minden jog
+            fenntartva</span></p>
         <div class="credits">
           A weboldalt készítette: <a href="">Szenes Márton</a>
         </div>
       </div>
-  
+
     </footer>
 
-  <!-- Scroll Top -->
-  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+    <!-- Scroll Top -->
+    <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i
+        class="bi bi-arrow-up-short"></i></a>
 
-  <!-- Preloader -->
-  <div id="preloader"></div>
+    <!-- Preloader -->
+    <div id="preloader"></div>
 
-  <!-- Vendor JS Files -->
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+    <!-- Vendor JS Files -->
+    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/vendor/php-email-form/validate.js"></script>
+    <script src="assets/vendor/aos/aos.js"></script>
+    <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+    <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+    <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
+    <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
 
-  <!-- Main JS File -->
-  <script src="assets/js/main.js"></script>
+    <!-- Main JS File -->
+    <script src="assets/js/main.js"></script>
 
 </body>
 
