sections added to prices

--- a/RedBlack-demo/index.html
+++ b/RedBlack-demo/index.html
@@ -231,8 +231,8 @@
               <div class="icon">
                 <img src="assets/img/icons/ice-skating-people.png" alt="">
               </div>
-              <a href="#" class="stretched-link">
-                <h3>Közönségkorcsolya</h3>
+              <a href="prices.html#auidence-ice-section" class="stretched-link">
+                <h3>Közönségjég</h3>
               </a>
               <p>Provident nihil minus qui consequatur non omnis maiores. Eos accusantium minus dolores iure perferendis
                 tempore et consequatur.</p>
