--- a/RedBlack-demo/prices.html
+++ b/RedBlack-demo/prices.html
@@ -108,20 +108,21 @@
     </div>
     <!-- End Page Title -->
 
-    <!-- Starter Section Section -->
-    <section id="starter-section" class="starter-section section">
+    <!-- Közönségjég Section -->
+    <section id="auidence-ice-section" class="auidence-ice-section">
 
-      <!-- Section Title -->
+      <!-- Közönségjég Title -->
       <div class="container section-title" data-aos="fade-up">
         <span>Közönségjég<br></span>
         <h2>Közönségjég</h2>
         <p>Az belépők egszeri alkalmi belépésre jogosítanak fel.</p>
-      </div><!-- End Section Title -->
+      </div>
+      <!-- End Közönségjég Title -->
 
       <div class="container" data-aos="fade-up">
         <div class="row g-4">
           <div class="col-12 col-lg-6">
-            <div class="card shadow">
+            <div class="card shadow" data-aos="fade-up" data-aos-delay="100">
               <div class="card-header">
                 <h3>Hétköznap</h3>
               </div>
@@ -157,7 +158,7 @@
             </div>
           </div>
           <div class="col-12 col-lg-6">
-            <div class="card shadow">
+            <div class="card shadow"  data-aos="fade-up" data-aos-delay="200">
               <div class="card-header d-flex align-items-baseline">
                 <h3>Hétvégén</h3>
                 <h6 class="ms-auto text-end">(Munkaszüneti és iskolaszüneti napokon)</h6>
@@ -194,7 +195,7 @@
             </div>
           </div>
           <div class="col-12 col-lg-6">
-            <div class="card shadow">
+            <div class="card shadow"  data-aos="fade-up" data-aos-delay="300">
               <div class="card-header d-flex align-items-baseline">
                 <h3>Korcsolyabérlés</h3>
               </div>
@@ -207,7 +208,7 @@
             </div>
           </div>
           <div class="col-12 col-lg-6">
-            <div class="card shadow">
+            <div class="card shadow"  data-aos="fade-up" data-aos-delay="400">
               <div class="card-header d-flex align-items-baseline">
                 <h3>Kísérőjegy</h3>
               </div>
@@ -223,78 +224,47 @@
         </div>
       </div>
 
-      KÖZÖNSÉGJÉG BELÉPŐK hétköznap:
-      * Gyermek (14 éves korig) – 2.300 Ft / alkalom
-      * Felnőtt (14 éves kor felett) – 3.000 Ft / alkalom
+    </section>
+    <!-- /Közönségjég Section -->
 
-      KÖZÖNSÉGJÉG BELÉPŐK hétvégén, munkaszüneti és iskolaszüneti napokon:
-      * Gyermek (14 éves korig) – 3.000 Ft / alkalom
-      * Felnőtt (14 éves kor felett) – 4.000 Ft / alkalom
+    <!-- Pályabérlés Section -->
+    <section  id="rent-section" class="rent-section">
+      <!-- Pályabérlés Title -->
+      <div class="container section-title" data-aos="fade-up">
+        <span>Pályabérlés<br></span>
+        <h2>Pályabérlés</h2>
+        <p>Pályabérlés alcíme.</p>
+      </div>
+      <!-- End Pályabérlés Title -->
 
-      KÍSÉRŐ JEGY (19.00 óra után csak kísérőjeggyel lehet a jégpálya területén tartózkodni annak aki nem korcsolyázik): 1.000 Ft
+    </section>
+    <!-- /Pályabérlés Section -->
 
-      KÖZÖNSÉGJÉG CSALÁDI BELÉPŐK hétköznap:
-      * 2 felnőtt + 2 gyermek (14 éves korig) – 8.500 Ft / alkalom
-      * 2 felnőtt + 3 gyermek (14 éves korig) – 11.000 Ft / alkalom
+    <!-- Korcsolyaoktatás Section -->
+    <section  id="rent-section" class="rent-section">
+      <!-- Korcsolyaoktatás Title -->
+      <div class="container section-title" data-aos="fade-up">
+        <span>Korcsolyaoktatás<br></span>
+        <h2>Korcsolyaoktatás</h2>
+        <p>Korcsolyaoktatás alcíme.</p>
+      </div>
+      <!-- End Korcsolyaoktatás Title -->
 
-      KÖZÖNSÉGJÉG CSALÁDI BELÉPŐK hétvégén, munkaszüneti és iskolaszüneti napokon:
-      * 2 felnőtt + 2 gyermek (14 éves korig) – 11.000 Ft / alkalom
-      * 2 felnőtt + 3 gyermek (14 éves korig) – 13.500 Ft / alkalom
+    </section>
+    <!-- /Korcsolyaoktatás Section -->
 
-      KORCSOLYA BÉRLÉS (hétköznap és hétvégén):
-      * 14 év alatt: 1.500 Ft / alkalom
-      * 14 év felett: 2.000 Ft / alkalom
+    <!-- Hokisuli Section -->
+    <section  id="rent-section" class="rent-section">
+      <!-- Hokisuli Title -->
+      <div class="container section-title" data-aos="fade-up">
+        <span>Hokisuli<br></span>
+        <h2>Hokisuli</h2>
+        <p>Hokisuli alcíme.</p>
+      </div>
+      <!-- End Hokisuli Title -->
 
-      PÁLYABÉRLÉS:
-      * Hétfő – Csütörtök: 40.000 Ft / 50 perc
-      * Péntek – Vasárnap: 50.000 Ft / 50 perc
-      Bérlehető időpontok:
-      Hétköznap (hétfőtől péntekig): 6.00-24.00.
-      Hétvégén (szombaton és vasárnap): 13.00-15.00 és 20.00-24.00.
-      A pályabérlés ára a belső, sátorral fedett jégpályára és az elő sátorra vonatkozik! A jégfolyosó használatát nem tartalmazza!
-      Az egész jég komplexum (jégpálya és jégfolyosó) kibérlésére is van lehetőség, melynek ára: 150.000 Ft / 50 perc.
-      További információk és kedvezmények a pályabérlés menüpont alatt!
-
-      KORI SULI – oktatás kezdő és középhaladó szinten gyerekeknek
-      3 éves kortól:
-      * Hétfő: 17.00-17.50 óra
-      * Szerda: 17.00-17.50 óra
-      * Szombat: 9.00-9.50 óra
-      Ár: 5.500 Ft / Fő / alkalom
-      Testvér kedvezmény: 5.000 Ft / Fő / alkalom
-
-      KÖZÉPHALADÓ, HALADÓ ÉS FELNŐTT KORCSOLYA OKTATÁS:
-      * Hétfő: 18.00-18.50 óra
-      * Szerda: 18.00-18.50 óra
-      * Szombat: 08.00-08.50 óra
-      Ár: 6.500 Ft / Fő / alkalom
-      Testvér (család) kedvezmény: 6.000 Ft / Fő / alkalom
-      Havi bérlet/tagdíj vásárlására is van lehetőség, ami tartalmazza az adott hónapban az összes oktatáson/edzésen – hétfő, szerda, szombat – való részvételt.
-      Ára: 65.000 Ft / hó
-      A havi bérlet árát semmilyen esetben – betegség, utazás, stb. – nem térítjük vissza, mert tagdíjként funkcionál!
-
-      MAGÁN KORI OKTATÁS:
-      Elő- és utó szezonban elérhető!
-      Időpontok egyeztetés szerint.
-      Árak: 7.500 Ft / Fő / 50 perc
-      5.000 Ft / Fő / 25 perc
-      A magán oktatás ára nem tartalmazza a jégpálya belépő árát!
-
-      HOKI SULI (kezdő jégkorong oktatás):
-      www.budaorsvillamok.hu
-      * 4.000 Ft / Fő / alkalom
-      * 5 alkalmas bérlet: 20.000 Ft / Fő (csak kezdőknek).
-      Időpontok:
-      * Kedd: 16:30 – 17:15.
-      * Csütörtök: 16:30 – 17.15. és Vasárnap 9:00 – 9:50
-      BV_logo_fehe¦ür_keret_ne¦ülku¦łl_fehe¦ür_ha¦ütte¦ür_2083px
-      JÉGKORONG utánpótlás EGYESÜLET:
-      www.budaorsvillamok.hu
-      * 4.000 Ft / Fő / alkalom
-      * Tagdíj 1 hónapra: 30.000 Ft / Fő, testvérek esetén 50.000 Ft / 2 Fő, amely tartalmazza a heti 3 jeges edzést, heti 1-2 száraz edzést, havi 1 korcsolyatechnika edzést, edző meccseket…
-
-
-    </section><!-- /Starter Section Section -->
+    </section>
+    <!-- /Hokisuli Section -->
 
   </main>
 
